--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,19 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+VERSION_NAME=0.1.0-SNAPSHOT
+VERSION_CODE=1
+GROUP=com.github.gabrielemariotti.recyclerview
+
+POM_DESCRIPTION=which provides simple Item animations to RecyclerView items
+POM_URL=https://github.com/gabrielemariotti/RecyclerViewItemAnimators
+POM_SCM_URL=https://github.com/gabrielemariotti/RecyclerViewItemAnimators
+POM_SCM_CONNECTION=scm:git@github.com:gabrielemariotti/RecyclerViewItemAnimators.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:gabrielemariotti/RecyclerViewItemAnimators.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=gabrielemariotti
+POM_DEVELOPER_NAME=Gabriele Mariotti
