--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="it.gmariotti.recyclerview.itemanimator.demo"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="it.gmariotti.recyclerview.itemanimator.demo" >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/DemoTheme">
-
+        android:theme="@style/DemoTheme" >
+        <activity
+            android:name=".ui.ListActivity"
+            android:theme="@style/DemoTheme" >
+        </activity>
+        <activity
+            android:name=".ui.GridActivity"
+            android:theme="@style/DemoTheme" >
+        </activity>
+        <activity
+            android:name=".ui.AnimationListActivity"
+            android:theme="@style/DemoTheme" >
+        </activity>
+        <activity
+            android:name=".ui.AnimationGridActivity"
+            android:theme="@style/DemoTheme" >
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/DemoTheme"
-            >
+            android:label="@string/title_activity_main"
+            android:theme="@style/DemoTheme.NoActionBar" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
